# last-mile

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_DISTRIBUTION.md  Makefile  README.md  docker_build.sh  docker_run.sh  run.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
charts/last-mile/: Chart.yaml  README.md  values.yaml
charts/last-mile/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  service.yaml  serviceaccount.yaml
client/: Cargo.toml
client/examples/: client.rs  test_basic.rs
client/src/: client.rs  lib.rs  websocket.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  message.rs
config/: tslm.toml
docker/: amazonlinux.dockerfile  build-amazonlinux-openssl-rust.dockerfile  docker_build.sh  docker_exec.sh  exec-amazonlinux-openssl.dockerfile  last-mile.dockerfile  slim.dockerfile
scripts/: install-hooks.sh  install.sh
server/: Cargo.toml
server/src/: lib.rs  server.rs  settings.rs
server/src/tslm/: channel.rs  directory.rs  endpoint.rs  hub.rs  mod.rs  server.rs  websocket.rs
src/: client.rs  main.rs  server.rs  tslm.rs
src/tslm/: channel.rs  directory.rs  endpoint.rs  error.rs  hub.rs  mod.rs  server.rs  tslm.rs  websocket.rs
src/tslm/client/: client.rs  mod.rs  websocket.rs
src/tslm/common/: error.rs
src/tslm/web/: websocket.rs
