[package]
name = "last-mile-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Ivan Spiler <spiler@gmail.com>"]
license = "Apache-2.0"
description = "WebSocket client library for connecting to TSLM gateway servers"
repository = "https://github.com/terminal-stream/last-mile"
keywords = ["websocket", "client", "pubsub", "messaging"]
categories = ["network-programming", "web-programming::websocket"]
readme = "../README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]

common = { path = "../common" }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# serialization
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

# non blocking io tasking
tokio = { version = "1.10.0", features = ["full"] }

# blocking
crossbeam = { version = "0.8.1" }

# websocket server 3 (tokio-tungstenite)
tungstenite = "0.21.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures = "0.3"
futures-util = { version = "0.3" }
futures-channel = "0.3"
