[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Spiler <spiler@gmail.com>"]

[badges]
maintenance = { status = "experimental" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialization
serde = { version = "1.0" }
serde_json = "1.0"
