[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Ivan Spiler <spiler@gmail.com>"]
license = "Apache-2.0"
description = "Shared types and utilities for TSLM WebSocket gateway"
repository = "https://github.com/terminal-stream/last-mile"
keywords = ["websocket", "messaging", "types"]
categories = ["network-programming"]
readme = "../README.md"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# serialization
serde = { version = "1.0" }
serde_json = "1.0"

# error handling
thiserror = "1.0"
