[package]
name = "tslm"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Spiler <spiler@gmail.com>"]

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]

common = { path = "../common" }

# log interface and implementation
log = { version = "0.4.17" }
log4rs = { version = "1.1.1" }

# serialization
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

# non blocking io tasking
tokio = { version = "1.10.0", features = ["full"] }

# blocking
crossbeam = { version = "0.8.1" }

# websocket server 3 (tokio-tungstenite)
tungstenite = "0.20.0"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
futures = "0.3"
futures-util = { version = "0.3" }
futures-channel = "0.3"
