[package]
name = "last-mile-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Ivan Spiler <spiler@gmail.com>"]
license = "Apache-2.0"
description = "A WebSocket gateway server for secure pub/sub messaging between internal networks and public clients"
repository = "https://github.com/terminal-stream/last-mile"
keywords = ["websocket", "gateway", "pubsub", "messaging", "server"]
categories = ["network-programming", "web-programming::websocket"]
readme = "../README.md"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "last_mile_server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]

common = { path = "../common" }

# tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# serialization
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

# non blocking io tasking
tokio = { version = "1.42", features = ["full"] }

# blocking
crossbeam = { version = "0.8" }

# websocket server 3 (tokio-tungstenite)
tungstenite = "0.28"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3"
futures-util = { version = "0.3" }
futures-channel = "0.3"

# server configuration
config = "0.14"

# cmd arguments
clap = { version = "4.5", features = ["derive"] }

# rate limiting
governor = "0.10"

# OpenSSL with vendored feature for static builds
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }